# rocket-server

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  Procfile  README.md  RustConfig  docker-compose.yml
.github/workflows/: rust.yml
service/: Cargo.toml  Dockerfile
service/src/: lib.rs  main.rs
service/src/models/users/: user.rs
service/src/web/routes/: hello.rs  internal.rs  mod.rs  user.rs
service/tests/: tests.rs
service/tests/common_steps/: client_steps.rs  mod.rs
service/tests/hello/: mod.rs
service/tests/internal/: mod.rs
src/: main.rs
src/functional_tests/hello/: mod.rs
src/models/users/: user.rs
src/routes/: user.rs
src/routes/user/: greeting.rs
src/web/routes/: hello.rs  user.rs
